--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "crwn-clothing-server",
   "version": "1.0.0",
-  "engines":{
-    "node":"14.17.0",
-    "npm":"6.14.13"
+  "engines": {
+    "node": "14.17.0",
+    "npm": "6.14.13"
   },
   "scripts": {
     "client": "cd client && yarn start",
@@ -18,6 +18,7 @@
     "compression": "1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "react-error-boundary": "^3.1.3",
     "stripe": "6.28.0"
   },
   "devDependencies": {
